--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,5 +1,5 @@
 # ignore content of uploads folder
-uploads/*
+uploads/.gitkeep
 thumbnails/*
 # except one (empty) file to have the folder in version control
 !uploads/.gitkeep
